envoy/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  path: "/"
                  headers:
                    name: "x-route-to"
                    exact_match: "service2"
                route:
                  cluster: service2
              - match:
                  safe_regex: { "google_re2": {}, "regex": ".*" }
                route:
                  cluster: service1
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: service1
    health_checks:
      timeout: 5s
      interval: 5s
      unhealthy_threshold: 5
      healthy_threshold: 5
      http_health_check:
        path: "/"
      event_log_path: "./health-check.log"
      always_log_health_check_failures: true
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    # http2_protocol_options: {}
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8010
  - name: service2
    health_checks:
      timeout: 5s
      interval: 5s
      unhealthy_threshold: 5
      healthy_threshold: 5
      http_health_check:
        path: "/"
      event_log_path: "./health-check.log"
      always_log_health_check_failures: true
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    # http2_protocol_options: {}
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8020
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
